crates/formatter/tests/snapshots/snapshots__anki__storage__card__fix_mod.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update cards set mod = cast (mod as integer) where mod != cast (mod as integer);
