crates/formatter/tests/snapshots/snapshots__anki__storage__card__fix_ordinal.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update cards
set ord = max(0, min(30000, ord)), mod = ?1, usn = ?2
where ord != max(0, min(30000, ord));
