crates/formatter/tests/snapshots/snapshots__anki__storage__card__get_card.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select
	id,
	nid,
	did,
	ord,
	cast (mod as integer),
	usn,
	type,
	queue,
	due,
	cast (ivl as integer),
	factor,
	reps,
	lapses,
	left,
	odue,
	odid,
	flags,
	data
from cards
