crates/formatter/tests/snapshots/snapshots__anki__storage__card__get_card_entry.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select id, nid, case when odid = 0 then did else odid end as did from cards;
