crates/formatter/tests/snapshots/snapshots__anki__storage__card__get_ignored_before_count.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select count(distinct cid)
from revlog
where id > ? and type == 0 and cid in search_cids;
