crates/formatter/tests/snapshots/snapshots__anki__storage__card__new_cards.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select id, nid, ord, cast (mod as integer), did, odid
from cards
where did = ? and queue = 0;
