crates/formatter/tests/snapshots/snapshots__anki__storage__card__search_cards_of_notes_into_table.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into search_cids
select id
from cards
where nid in (select nid from search_nids);
