crates/formatter/tests/snapshots/snapshots__anki__storage__card__search_cids_setup_ordered.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists search_cids;
create temporary table search_cids (
	cid integer not null
);
