crates/formatter/tests/snapshots/snapshots__anki__storage__card__siblings_for_bury.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into search_cids
select id
from cards
where
	id != :card_id
	and nid = :note_id
	and (
		(:include_new and queue = :new_queue)
		or (:include_reviews and queue = :review_queue)
		or (:include_day_learn and queue = :daylearn_queue)
	);
